# SecureScan

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines-template.yml  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: scheduled-scan.yml  security-scan.yml
examples/: package.json  requirements.txt  vulnerable_app.py
securescan/: __init__.py  __main__.py  cli.py  config.py  core.py  models.py
securescan/reporters/: __init__.py  base.py  executive_reporter.py  html_reporter.py  json_reporter.py  sarif_reporter.py
securescan/scanners/: __init__.py  base.py  sast_scanner.py  sca_scanner.py  secrets_scanner.py
securescan/web/: __init__.py  app.py  run.py
securescan/web/templates/: base.html  index.html  result_detail.html  results.html  scan.html
tests/: __init__.py  test_core.py  test_sast_scanner.py  test_sca_scanner.py  test_secrets_scanner.py
